--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>vyaccheslav anzhiganov</title>
+    <title>vyacheslav anzhiganov</title>
   <head>
   <body>
     <h1>contacts</h1>
@@ -17,6 +16,7 @@
     <ul>
       <li><a href="http://zettadns.com">zettadns.com</a> - free dns hosting</li>
       <li><a href="http://advertious.com">advertious.com</a> - ads platform</li>
+      <li><a href="http://imgd.ru">imgd.ru</a> - image hosting</li>
     </ul>
   </body>
 </html>
