add project 9redmine.com

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li><a href="http://zettadns.com">zettadns.com</a> - free dns hosting</li>
       <li><a href="http://advertious.com">advertious.com</a> - ads platform</li>
       <li><a href="http://imgd.ru">imgd.ru</a> - image hosting</li>
+      <li><a href="http://9redmine.com">9redmine.com</a> - redmine service</li>
     </ul>
   </body>
 </html>
