--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>vyacheslav anzhiganov</title>
+    <!-- Google Fonts -->
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
+    <!-- CSS Reset -->
+    <link rel="stylesheet" href="//cdn.rawgit.com/necolas/normalize.css/master/normalize.css">
+    <!-- Milligram CSS minified -->
+    <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
   <head>
   <body>
-    <h1>contacts</h1>
+    <h1>vyacheslav anzhiganov</a>
+    <h2>contacts</h2>
     <ul>
       <li>tel: +7 915 474 7270</li>
       <li>email: vanzhiganov@ya.ru</li>
       <li>telegram: vanzhiganov</li>
       <li>github: <a href="http://github.com/vanzhiganov">vanzhiganov</a></li>
     </ul>
-    <h1>projects</h1>
+    <h2>projects</h2>
     <ul>
       <li><a href="http://zettadns.com">zettadns.com</a> - free dns hosting</li>
       <li><a href="http://advertious.com">advertious.com</a> - ads platform</li>
