--- a/index.html
+++ b/index.html
@@ -11,20 +11,26 @@
     <link rel="stylesheet" href="//cdn.rawgit.com/milligram/milligram/master/dist/milligram.min.css">
   <head>
   <body>
-    <h1>vyacheslav anzhiganov</a>
-    <h2>contacts</h2>
-    <ul>
-      <li>tel: +7 915 474 7270</li>
-      <li>email: vanzhiganov@ya.ru</li>
-      <li>telegram: vanzhiganov</li>
-      <li>github: <a href="http://github.com/vanzhiganov">vanzhiganov</a></li>
-    </ul>
-    <h2>projects</h2>
-    <ul>
-      <li><a href="http://zettadns.com">zettadns.com</a> - free dns hosting</li>
-      <li><a href="http://advertious.com">advertious.com</a> - ads platform</li>
-      <li><a href="http://imgd.ru">imgd.ru</a> - image hosting</li>
-      <li><a href="http://9redmine.com">9redmine.com</a> - redmine service</li>
-    </ul>
+    <div class="container">
+      <div class="row">
+        <div class="column">
+          <h1>vyacheslav anzhiganov</a>
+          <h2>contacts</h2>
+          <ul>
+            <li>tel: +7 915 474 7270</li>
+            <li>email: vanzhiganov@ya.ru</li>
+            <li>telegram: vanzhiganov</li>
+            <li>github: <a href="http://github.com/vanzhiganov">vanzhiganov</a></li>
+          </ul>
+          <h2>projects</h2>
+          <ul>
+            <li><a href="http://zettadns.com">zettadns.com</a> - free dns hosting</li>
+            <li><a href="http://advertious.com">advertious.com</a> - ads platform</li>
+            <li><a href="http://imgd.ru">imgd.ru</a> - image hosting</li>
+            <li><a href="http://9redmine.com">9redmine.com</a> - redmine service</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
