--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
       <div class="row">
         <div class="column">
           <h1>vyacheslav anzhiganov</a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column">
           <h2>contacts</h2>
           <ul>
             <li>tel: +7 915 474 7270</li>
             <li>email: vanzhiganov@ya.ru</li>
             <li>telegram: vanzhiganov</li>
             <li>github: <a href="http://github.com/vanzhiganov">vanzhiganov</a></li>
+            <li>twitter: <a class="twitter-follow-button" href="https://twitter.com/vanzhiganov">vanzhiganov</a>
           </ul>
           <h2>projects</h2>
           <ul>
@@ -34,6 +39,13 @@
           </ul>
         </div>
       </div>
+      <div class="row">
+        <div class="columnt">
+          <a class="twitter-timeline" href="https://twitter.com/vanzhiganov">Tweets by vanzhiganov</a>
+        </div>
+      </div>
     </div>
+    <script src="https://unpkg.com/github-card@1.2.1/dist/widget.js"></script>
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
