--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="columnt">
-          <a class="twitter-timeline" href="https://twitter.com/vanzhiganov">Tweets by vanzhiganov</a>
+        <div class="column">
+          <a class="twitter-timeline" href="https://twitter.com/vanzhiganov">tweets by vanzhiganov</a>
         </div>
       </div>
     </div>
