--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
       <div class="row">
         <div class="columnt">
-          <div class="github-widget" data-username="surbhioberoi"></div>
+          <div class="github-widget" data-username="vanzhiganov"></div>
         </div>
         <div class="column">
           <a class="twitter-timeline" href="https://twitter.com/vanzhiganov">tweets by vanzhiganov</a>
