--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="columnt">
+        <div class="column">
           <div class="github-widget" data-username="vanzhiganov"></div>
         </div>
         <div class="column">
