--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
         </div>
       </div>
       <div class="row">
-        <div class="column">
+        <!-- div class="column">
           <div class="github-widget" data-username="vanzhiganov"></div>
-        </div>
+        </div -->
         <div class="column">
           <a class="twitter-timeline" href="https://twitter.com/vanzhiganov">tweets by vanzhiganov</a>
         </div>
       </div>
     </div>
-    <script async src="//unpkg.com/github-card@1.2.1/dist/widget.js" charset="utf-8"></script>
+    <!-- script async src="//unpkg.com/github-card@1.2.1/dist/widget.js" charset="utf-8"></script -->
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
