--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <li><a href="http://advertious.com">advertious.com</a> - ads platform</li>
             <li><a href="http://imgd.ru">imgd.ru</a> - image hosting</li>
             <li><a href="http://9redmine.com">9redmine.com</a> - redmine service</li>
+            <li><a href="http://seostatsanalyze.com">seostatsanalyze.com</a> - seo service</li>
           </ul>
         </div>
       </div>
@@ -50,5 +51,6 @@
     </div>
     <!-- script async src="//unpkg.com/github-card@1.2.1/dist/widget.js" charset="utf-8"></script -->
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter27143651 = new Ya.Metrika({ id:27143651, clickmap:true, trackLinks:true, accurateTrackBounce:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/watch.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/27143651" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
   </body>
 </html>
