--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <style>
       * {color: #000;}
     </style>
-  <head>
+  </head>
   <body>
     <div class="container">
       <div class="row">
         <div class="column">
-          <h1>vyacheslav anzhiganov</a>
+          <h1>vyacheslav anzhiganov</h1>
         </div>
       </div>
       <div class="row">
