--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li><a href="http://imgd.ru">imgd.ru</a> - image hosting</li>
             <li><a href="http://9redmine.com">9redmine.com</a> - redmine service</li>
             <li><a href="http://seostatsanalyze.com">seostatsanalyze.com</a> - seo service</li>
+            <li><a href="http://qr.ee">qr.ee</a> - qr code generator</li>
           </ul>
         </div>
       </div>
