--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
           <h2>projects</h2>
           <ul>
             <li><a href="http://zettadns.com">zettadns.com</a> - free dns hosting</li>
+            <li><a href="http://helptalks.ru">helptalks.ru</a> - chat app for professional psychologists (python flask, mysql, socket.io, redis, celery)</li>
             <li><a href="http://advertious.com">advertious.com</a> - ads platform</li>
             <li><a href="http://imgd.ru">imgd.ru</a> - image hosting</li>
             <li><a href="http://9redmine.com">9redmine.com</a> - redmine service</li>
