--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           </ul>
           <h2>projects</h2>
           <ul>
-            <li><a href="http://zettadns.com">zettadns.com</a> - free dns hosting</li>
-            <li><a href="http://helptalks.ru">helptalks.ru</a> - chat app for professional psychologists (python flask, mysql, socket.io, redis, celery)</li>
-            <li><a href="http://advertious.com">advertious.com</a> - ads platform</li>
+            <li><a href="http://zettadns.com">zettadns.com</a> - free dns hosting (python2, flask, postgresql, sqlite, redis, bind9)</li>
+            <li><a href="http://helptalks.ru">helptalks.ru</a> - chat app for professional psychologists (python3, flask, mysql, socket.io, redis, celery)</li>
+            <li><a href="http://advertious.com">advertious.com</a> - ads platform (php5, mysql)</li>
             <li><a href="http://imgd.ru">imgd.ru</a> - image hosting</li>
             <li><a href="http://9redmine.com">9redmine.com</a> - redmine service</li>
             <li><a href="http://seostatsanalyze.com">seostatsanalyze.com</a> - seo service</li>
