--- a/web_start.html
+++ b/web_start.html
@@ -1,3 +1,11 @@
-# optimize your website before start
-
-- checking the speed of website load - https://testmysite.withgoogle.com/intl/en-gb
+<html>
+  <head>
+    <title>optimize your website before start</title>
+  </head>
+  <body>
+    <h1>optimize your website before start</h1>
+    <ul>
+      <li>checking the speed of website load - https://testmysite.withgoogle.com/intl/en-gb</li>
+    </ul>
+  </body>
+</html>
