--- a/web_start.html
+++ b/web_start.html
@@ -5,7 +5,7 @@
   <body>
     <h1>optimize your website before start</h1>
     <ul>
-      <li>checking the speed of website load - https://testmysite.withgoogle.com/intl/en-gb</li>
+      <li>checking the speed of website load - <a href="https://testmysite.withgoogle.com/intl/en-gb">https://testmysite.withgoogle.com/intl/en-gb</a></li>
     </ul>
   </body>
 </html>
