--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
         <div class="column">
           <h2>contacts</h2>
           <ul>
-            <li>tel: +7 915 474 7270</li>
-            <li>email: vanzhiganov@ya.ru</li>
+            <li>tel: +7 983 275 6171</li>
+            <li>email: vanzhiganov@outlook.com</li>
             <li>telegram: vanzhiganov</li>
+            <li>skype: vanzhiganov</li>
             <li>github: <a href="http://github.com/vanzhiganov">vanzhiganov</a></li>
             <li>twitter: <a class="twitter-follow-button" href="https://twitter.com/vanzhiganov">vanzhiganov</a>
           </ul>
